form html basico

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,16 @@
 <h1>Proyecto Taller Web 2</h1>
-<h2>Conexion de firebase</h2>
+<h2>Registro de usuario</h2>
+
+<form>
+    <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input type="text" class="form-control" formControlName="email">
+    </div>
+    <br>
+    <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input type="password" class="form-control" formControlName="password">
+    </div>
+    <br>
+    <input type="submit" value="Enviar">
+</form>
