--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,8 +1,7 @@
-
-<form class="container mt-5">
+<form class="container m-5">
     <div class="mb-3">
         <label class="form-label">Email</label>
-        <input type="email" class="form-control" formControlName="email"  >
+        <input type="text" class="form-control" formControlName="email">
     </div>
     <br>
     <div class="mb-3">
