--- a/src/app/views/signup/signup.component.html
+++ b/src/app/views/signup/signup.component.html
@@ -1,31 +1,83 @@
 <div class="content">
-    <h1 class="h3 mb-3 text-center">Formulario de Registro</h1>
-    <div class="form-element form-stack mb-3">
+  <h1 class="h3 mb-3 text-center">Formulario de Registro</h1>
+  <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+   <div class="form-element form-stack mb-3">
       <label for="nombre" class="form-label">Nombre:</label>
-      <input class="campo-entrada" type="text" name="nombre" />
+      <input
+        name="nombre"
+        class="campo-entrada"
+        type="text"
+        formControlName="nombre"
+     
+      />
+      <div *ngIf="signupForm.get('nombre')?.touched && signupForm.get('nombre')?.errors?.['required']"
+      class="alert alert-danger">El nombre es requerido</div>
+      <!-- <div *ngIf="signupForm.get('nombre')?.touched && signupForm.get('nombre')?.errors?.['minLength']"
+      class="alert alert-danger">El nombre debe tener un minimo de 
+      {{signupForm.get('nombre')?.errors?.['minLength']?.requiredLength}} caracteres.</div> -->
     </div>
-    <div class="form-element form-stack mb-3">
+      <div class="form-element form-stack mb-3">
       <label for="apellido" class="form-label">Apellido:</label>
-      <input class="campo-entrada" type="text" name="apellido" />
+      <input
+        formControlName="apellido"
+        name="apellido"
+        class="campo-entrada"
+        type="text"
+        
+      />
+      <div *ngIf="signupForm.get('apellido')?.touched && signupForm.get('apellido')?.errors?.['required']"
+      class="alert alert-danger">El apellido es requerido</div>
     </div>
     <div class="form-element form-stack mb-3">
       <label for="direccion" class="form-label">Dirección:</label>
-      <input class="campo-entrada" type="text" name="direccion" />
+      <input
+        formControlName="direccion"
+        name="direccion"
+        class="campo-entrada"
+        type="text"
+      />
+      <div *ngIf="signupForm.get('direccion')?.touched && signupForm.get('direccion')?.errors?.['required']"
+      class="alert alert-danger">La direccion es requerida</div>
     </div>
     <div class="form-element form-stack mb-3">
       <label for="email" class="form-label">Email:</label>
-      <input class="campo-entrada" type="text" name="email" />
+      <input 
+      formControlName="email"
+      name="email"
+       class="campo-entrada"
+        type="text"
+          />
+         <div *ngIf="signupForm.get('email')?.touched && signupForm.get('email')?.errors?.['required']"
+         class="alert alert-danger">El email es requerido</div>
     </div>
     <div class="form-element form-stack mb-3">
       <label for="password" class="form-label">Password:</label>
-      <input class="campo-entrada" type="password" name="password" />
+      <input
+        formControlName="password"
+        name="password"
+        class="campo-entrada"
+        type="password"
+      />
+      <div *ngIf="signupForm.get('password')?.touched && signupForm.get('password')?.errors?.['required']"
+      class="alert alert-danger">El password es requerido.</div>
+      <div *ngIf="signupForm.get('password')?.touched && signupForm.get('password')?.errors?.['minLength']"
+      class="alert alert-danger">El password debe tener un minimo de 
+      {{signupForm.get('password')?.errors?.['minLength']?.requiredLength}} caracteres.</div>
     </div>
-    <div class="form-element form-stack mb-3">
+     <div class="form-element form-stack mb-3">
       <label for="repassword" class="form-label">Re password:</label>
-      <input class="campo-entrada" type="password" name="repassword" />
-    </div>
+      <input
+        formControlName="repassword"
+        name="repassword"
+        class="campo-entrada"
+        type="password"
+      />
+      <div *ngIf="signupForm.get('repassword')?.touched && signupForm.get('repassword')?.errors?.['required']"
+      class="alert alert-danger">El repassword es requerido</div>
+    </div> 
     <div class="my-3">
-      <input class="w-100 btn btn-primary" type="submit" value="Registrarse" />
-      <a class="nav-link btn btn-danger my-3" href="/signin">cancelar</a>
+      <button class="w-100 btn btn-primary" type="submit" [disabled]="signupForm.invalid">Registrarse</button> 
+      <a class="btn btn-danger w-100 my-3" href="/signin">cancelar</a>
     </div>
-  </div>
+  </form>
+</div>
