primer usuario guardado en la firestore

--- a/src/app/views/signup/signup.component.html
+++ b/src/app/views/signup/signup.component.html
@@ -1,54 +1,68 @@
 <div class="content">
   <h1 class="h3 mb-3 text-center">Formulario de Registro</h1>
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-   <div class="form-element form-stack mb-3">
+    <div class="form-element form-stack mb-3">
       <label for="nombre" class="form-label">Nombre:</label>
       <input
-        name="nombre"
+        name="name"
         class="campo-entrada"
         type="text"
-        formControlName="nombre"
-     
+        formControlName="name"
       />
-      <div *ngIf="signupForm.get('nombre')?.touched && signupForm.get('nombre')?.errors?.['required']"
-      class="alert alert-danger">El nombre es requerido</div>
+      <div
+        *ngIf="signupForm.get('nombre')?.touched && signupForm.get('nombre')?.errors?.['required']"
+        class="alert alert-danger"
+      >
+        El nombre es requerido
+      </div>
       <!-- <div *ngIf="signupForm.get('nombre')?.touched && signupForm.get('nombre')?.errors?.['minLength']"
       class="alert alert-danger">El nombre debe tener un minimo de 
       {{signupForm.get('nombre')?.errors?.['minLength']?.requiredLength}} caracteres.</div> -->
     </div>
-      <div class="form-element form-stack mb-3">
+    <div class="form-element form-stack mb-3">
       <label for="apellido" class="form-label">Apellido:</label>
       <input
-        formControlName="apellido"
-        name="apellido"
+        formControlName="surname"
+        name="surname"
         class="campo-entrada"
         type="text"
-        
       />
-      <div *ngIf="signupForm.get('apellido')?.touched && signupForm.get('apellido')?.errors?.['required']"
-      class="alert alert-danger">El apellido es requerido</div>
+      <div
+        *ngIf="signupForm.get('apellido')?.touched && signupForm.get('apellido')?.errors?.['required']"
+        class="alert alert-danger"
+      >
+        El apellido es requerido
+      </div>
     </div>
     <div class="form-element form-stack mb-3">
       <label for="direccion" class="form-label">Dirección:</label>
       <input
-        formControlName="direccion"
-        name="direccion"
+        formControlName="direction"
+        name="direction"
         class="campo-entrada"
         type="text"
       />
-      <div *ngIf="signupForm.get('direccion')?.touched && signupForm.get('direccion')?.errors?.['required']"
-      class="alert alert-danger">La direccion es requerida</div>
+      <div
+        *ngIf="signupForm.get('direccion')?.touched && signupForm.get('direccion')?.errors?.['required']"
+        class="alert alert-danger"
+      >
+        La direccion es requerida
+      </div>
     </div>
     <div class="form-element form-stack mb-3">
       <label for="email" class="form-label">Email:</label>
-      <input 
-      formControlName="email"
-      name="email"
-       class="campo-entrada"
+      <input
+        formControlName="email"
+        name="email"
+        class="campo-entrada"
         type="text"
-          />
-         <div *ngIf="signupForm.get('email')?.touched && signupForm.get('email')?.errors?.['required']"
-         class="alert alert-danger">El email es requerido</div>
+      />
+      <div
+        *ngIf="signupForm.get('email')?.touched && signupForm.get('email')?.errors?.['required']"
+        class="alert alert-danger"
+      >
+        El email es requerido
+      </div>
     </div>
     <div class="form-element form-stack mb-3">
       <label for="password" class="form-label">Password:</label>
@@ -58,13 +72,22 @@
         class="campo-entrada"
         type="password"
       />
-      <div *ngIf="signupForm.get('password')?.touched && signupForm.get('password')?.errors?.['required']"
-      class="alert alert-danger">El password es requerido.</div>
-      <div *ngIf="signupForm.get('password')?.touched && signupForm.get('password')?.errors?.['minLength']"
-      class="alert alert-danger">El password debe tener un minimo de 
-      {{signupForm.get('password')?.errors?.['minLength']?.requiredLength}} caracteres.</div>
+      <div
+        *ngIf="signupForm.get('password')?.touched && signupForm.get('password')?.errors?.['required']"
+        class="alert alert-danger"
+      >
+        El password es requerido.
+      </div>
+      <div
+        *ngIf="signupForm.get('password')?.touched && signupForm.get('password')?.errors?.['minLength']"
+        class="alert alert-danger"
+      >
+        El password debe tener un minimo de
+        {{signupForm.get('password')?.errors?.['minLength']?.requiredLength}}
+        caracteres.
+      </div>
     </div>
-     <div class="form-element form-stack mb-3">
+    <div class="form-element form-stack mb-3">
       <label for="repassword" class="form-label">Re password:</label>
       <input
         formControlName="repassword"
@@ -72,11 +95,21 @@
         class="campo-entrada"
         type="password"
       />
-      <div *ngIf="signupForm.get('repassword')?.touched && signupForm.get('repassword')?.errors?.['required']"
-      class="alert alert-danger">El repassword es requerido</div>
-    </div> 
+      <div
+        *ngIf="signupForm.get('repassword')?.touched && signupForm.get('repassword')?.errors?.['required']"
+        class="alert alert-danger"
+      >
+        El repassword es requerido
+      </div>
+    </div>
     <div class="my-3">
-      <button class="w-100 btn btn-primary" type="submit" [disabled]="signupForm.invalid">Registrarse</button> 
+      <button
+        class="w-100 btn btn-primary"
+        type="submit"
+        [disabled]="signupForm.invalid"
+      >
+        Registrarse
+      </button>
       <a class="btn btn-danger w-100 my-3" href="/signin">cancelar</a>
     </div>
   </form>
