--- a/src/app/views/signup/signup.component.html
+++ b/src/app/views/signup/signup.component.html
@@ -90,8 +90,8 @@
     <div class="form-element form-stack mb-3">
       <label for="repassword" class="form-label">Re password:</label>
       <input
-        formControlName="repassword"
-        name="repassword"
+        formControlName="password"
+        name="password"
         class="campo-entrada"
         type="password"
       />
