--- a/src/app/views/signin/signin.component.html
+++ b/src/app/views/signin/signin.component.html
@@ -1,5 +1,5 @@
 
-<main class="mt-4">
+<main class="my-4">
   <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
     <h3 class="mb-3 fw-normal text-center">Iniciar sesión</h3>
     <div class="content">
