--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">De Pelos PetShop</a>
+      <a class="navbar-brand" href="#">De pelos PetShop</a>
       <button
         class="navbar-toggler"
         type="button"
