--- a/src/app/views/signup/signup.component.html
+++ b/src/app/views/signup/signup.component.html
@@ -77,7 +77,7 @@
     </div> 
     <div class="my-3">
       <button class="w-100 btn btn-primary" type="submit" [disabled]="signupForm.invalid">Registrarse</button> 
-      <a class="btn btn-danger w-100 my-3" href="/signin">cancelar</a>
+      <a class="btn btn-danger w-100 my-3" href="/signin">Cancelar</a>
     </div>
   </form>
 </div>
