mejoro footer y otros elementos

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,38 +1,107 @@
-<footer class="d-flex justify-content-between bg-secondary p-3">
-  <article class="empresa-footer">
-    <span>De Pelos Pet shop</span>
-  </article>
-  <div class="redes-sociales d-flex justify-content-between">
-    <div>
-      <a href="#" target="_blank" class="whatsapp">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-    </div>
-    <div>
-      <a href="#" target="_blank" class="facebook">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-    </div>
-    <div>
-      <a href="#" target="_blank" class="instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </div>
-    <div>
-      <a href="https://www.twitter.com" target="_blank" class="twitter">
-        <i class="fab fa-twitter"></i>
-      </a>
-    </div>
-  </div>
-  <div class="datos">
-    <!-- Block level -->
-    <div class="row">
-      <div class=" " >© 2022 De pelos Pet shop</div>
-    </div>
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="my-5">
+  <!-- Footer -->
+  <footer
+    class="text-center text-lg-start text-white"
+    style="background-color: #1c2331"
+  >
+    <!-- Section: Social media -->
+    <section
+      class="d-flex justify-content-center p-4"
+      style="background-color: #e8630a"
+    >
+      <!-- Left -->
+      <div class="mx-3">
+        <span>Seguinos en nuestras redes sociales:</span>
+      </div>
+      <!-- Left -->
 
-    <!-- Inline level -->
-    <span class="d-inline-block" >
-      todos los derechos reservados.
-    </span>
-  </div>
-</footer>
+      <!-- Right -->
+      <div>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Secciones</h6>
+            <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #e8630a; height: 2px"
+            />
+            <p>
+              <a href="#" class="text-white text-decoration-none">Home</a>
+            </p>
+            <p>
+              <a href="#" class="text-white text-decoration-none">Ingresar</a>
+            </p>
+            <p>
+              <a href="#" class="text-white text-decoration-none"
+                >Crear Cuenta</a
+              >
+            </p>
+            <p>
+              <a href="#" class="text-white text-decoration-none">Productos</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Contacto</h6>
+            <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #e8630a; height: 2px"
+            />
+            <p>
+              <i class="fas fa-home mx-3"></i> Noguera 123, Padua. Buenos Aires.
+            </p>
+            <p>
+              <i class="fas fa-envelope mx-3"></i>
+              info@pocaspulgaspetshop.com.ar
+            </p>
+            <p><i class="fas fa-phone mx-3"></i> +11 123 456 78</p>
+          </div>
+          <!-- Grid column -->
+          <!-- Grid column -->
+          <div class="col-md-6 col-lg-4 col-xl-4 mb-2 mt-2">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52497.864111626914!2d-58.75686694179688!3d-34.67700889999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc12c97d710f3%3A0x55ef60fa4c99115f!2zUGV0IFNob3Ag4oCcUG9jYXMgUHVsZ2FzIiDwn5Cx8J-Qtg!5e0!3m2!1ses-419!2sar!4v1654047244262!5m2!1ses-419!2sar"
+              width="100%"
+              height="100%"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2022 Copyright - Todos los derechos reservados.
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+</div>
+<!-- End of .container -->
