--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,2 @@
-<<<<<<< HEAD
-
-=======
-{{titulo}}
-<app-banner></app-banner>
->>>>>>> 3aecd9febf631ca6faace705838a7d065b63d344
+<h1 class="text-center m-5">POCAS PULGAS PETSHOP</h1>
+<img src="https://petindustry.co/wp-content/uploads/2022/02/PETSHOP-TENDENCIAS-PETINDUSTRY1.jpeg" class="img-fluid" width="100%" alt="Responsive image">
