--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,40 +1,40 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">De pelos PetShop</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
+  <div class="container">
+    <img
+      class="navbar-brand"
+      width="100px"
+      height="100px"
+      src="assets/logo.png"
+    />
+    <!--<button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>-->
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signin">Ingresar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Crear Cuenta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/productos">Productos</a>
+        </li>
+      </ul>
+      <button class="btn btn-outline-dark" type="submit">
+        <i class="fa fa-shopping-cart" aria-hidden="true"></i> :
       </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/signin">Ingresar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/signup">Crear Cuenta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/productos">Productos</a>
-          </li>
-        </ul>
-        <button
-          
-          class="btn btn-outline-dark"
-          type="submit"
-        >
-          <i class="fa fa-shopping-cart" aria-hidden="true"></i> :
-         
-        </button>
-      </div>
     </div>
-  </nav>
+  </div>
+</nav>
