--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -1,1 +1,188 @@
-<p>productos works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card border-white text-white">
+                <img src="https://st.depositphotos.com/1765308/1274/i/600/depositphotos_12743043-stock-photo-three-dogs.jpg"
+                    class=" img-fluid mx-auto d-block" alt="">
+
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-4">
+            <h1>Filtros</h1>
+            <h5>Edad</h5>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="dropdown-divider"></div>
+            <h5>Peso</h5>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="dropdown-divider"></div>
+            <h5>Consideraciones</h5>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="radio" name="kit" id="">Kitten
+                </div>
+            </div>
+            <div class="dropdown-divider"></div>
+        </div>
+        <div class="col-8">
+            <h1>Productos</h1>
+            <div class="row m-0 p-0">
+                <div *ngFor="let p of productos; let i = index" class="col-4 m-0 p-0">
+                    <div class="card-group animate__animated animate__flipInX">
+                        <div class="card">
+                            <img src="https://www.catycan.com/78863-home_default/pouch-pro-plan-wet-cat-kitten-x-85-grs.jpg"
+                                alt="" class="">
+                            <div class="card-body">
+                                <h5 class="card-title">{{p.nombre}}</h5>
+                                <h4 class="cart-text d-inline text-danger">{{p.precioWithDiscount}}
+                                    <h4 class="d-inline tachado text-dark">{{p.precioOriginal}} </h4>
+                                    <h4 class="d-inline text-success">%{{p.descuento}} Off</h4>
+                                </h4>
+                            </div>
+                            <div class="card-footer m-auto">
+                                <button class="btn btn-primary btn-block" type="button">Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="card border border animate__animated animate__flipInX">
+                        <div class="row m-0 p-0">
+                            <div class="col-4 m-0 p-0">
+                                <img src="https://www.catycan.com/78863-home_default/pouch-pro-plan-wet-cat-kitten-x-85-grs.jpg"
+                                    alt="" class="">
+                            </div>
+                            <div class="row m-0 p-0">
+                                <div class="col m-0 p-0">
+                                    <h3 class="card-title text-center text-dark text-italic">{{p.nombre}}</h3>
+                                </div>
+                            </div>
+                            <div class="row m-0 p-0">
+                                <div class="col text-center">
+                                    <h4 class="d-inline text-danger">{{p.precioWithDiscount}}
+                                        <h4 class="d-inline tachado text-dark">{{p.precioOriginal}} </h4>
+                                        <h4 class="d-inline text-success">%{{p.descuento}} Off</h4>
+                                    </h4>
+                                </div>
+                            </div>
+                            <div class="row m-0 p-0 mt-3">
+                                <div class="col m-0 p-0">
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-primary" type="button">Agregar al carrito</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div *ngIf="carrito.length > 0; else elseCondicion">
+                        <table class="table table-responsive-xs table-striped table-hover">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Producto</th>
+                                    <th scope="col">Nombre</th>
+                                    <th scope="col">Precio</th>
+                                    <th scope="col">Descuento</th>
+                                    <th scope="col">Eliminar</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let p of carrito; let i = index">
+                                    <td>{{p.imagen}}</td>
+                                    <td>{{p.nombre}}</td>
+                                    <td>{{p.precioWithDiscount}}</td>
+                                    <td>{{p.descuento}}</td>
+                                    <td> <button type="button" class="close" data-dismiss="modal">&times;</button></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <ng-template #elseCondicion>
+                        <p>No tiene productos agregado al carrito actualmente</p>
+                    </ng-template>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" (click)="carritoPage()" [disabled]="carrito.length <= 0"
+                        class="btn btn-primary">Confirmar compra</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
