--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="my-5">
+<div class="m-0">
   <!-- Footer -->
   <footer
     class="text-center text-lg-start text-white"
@@ -8,7 +8,7 @@
     <!-- Section: Social media -->
     <section
       class="d-flex justify-content-center p-4"
-      style="background-color: #e8630a"
+      style="background-color: #143F6B"
     >
       <!-- Left -->
       <div class="mx-3">
