--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,2 +1,7 @@
-<h1 class="text-center m-5">POCAS PULGAS PETSHOP</h1>
-<img src="https://petindustry.co/wp-content/uploads/2022/02/PETSHOP-TENDENCIAS-PETINDUSTRY1.jpeg" class="img-fluid" width="100%" alt="Responsive image">
+<h1 class="text-center mb-2 my-5">POCAS PULGAS PETSHOP</h1>
+<h2 class="text-center mb-4">¡Hacemos envíos a toda la Argentina! <br>Comprá acá lo que necesita tu mascota y recibilo en tu domicilio.</h2>
+<app-banner></app-banner>
+<div class="promos mb-4">
+  <img src="https://firebasestorage.googleapis.com/v0/b/tallerweb2-1f7fb.appspot.com/o/promo%20(2).png?alt=media&token=58003c9b-868d-470a-aff8-bd14693a6d72" alt="">
+  <img src="https://firebasestorage.googleapis.com/v0/b/tallerweb2-1f7fb.appspot.com/o/promo%20(3).png?alt=media&token=8f1a400c-e698-4013-97f7-859b31ea02d6" alt="">
+</div>
