--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -1,9 +1,9 @@
 <br>
 <br>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-9 animate__animated animate__backInLeft">
-            <h5>Sus productos</h5>
+            <h3 class="mb-3">Tus productos</h3>
             <table class="table table-responsive-xs table-hover table-striped">
                 <thead class="thead-dark">
                     <tr>
@@ -24,58 +24,49 @@
             </table>
             <div class="row">
                 <div class="col animate__animated animate__bounceInUp">
-                    <h1>¡Confirma tu compra!</h1>
-                    <div class="card border-primary mb-3">
+                    <h1 class="mb-5 my-5">¡Confirmá tu compra!</h1>
+                    <div class="card mb-3">
                         <div class="card-header">¡Ya casi lo tenes!</div>
-                        <div class="card-body text-primary">
+                        <div class="card-body">
                           <h5 class="card-title">Cantidad de productos: {{carrito.length}}</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
         
                     </div>
-                    <div class="card border-primary mb-3">
-                        <div class="card-body text-primary">
+                    <div class="card mb-3">
+                        <div class="card-body ">
                           <h5 class="card-title">Example</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                     </div>
-                    <div class="card border-primary mb-3">
-                        <div class="card-body text-primary">
+                    <div class="card mb-3">
+                        <div class="card-body ">
                           <h5 class="card-title">Total a pagar {{carrito.length}}</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
-                    <button type="submit" class="btn btn-success btn-block">Realizar compra</button>
                     </div>
+                    <button type="submit" class="btn btn-success btn-block w-100">Confirmar compra</button>
 
                 </div>
             </div>
         </div>
         <div class="col-2 offset-1 m-auto animate__animated animate__backInRight">
-            <h5 class="">Tambien te puede interesar:</h5>
+            <h5 class="mb-3">Tambien te puede interesar:</h5>
             <div *ngFor="let p of carrito; let i = index" class="col m-0 p-0">
                 <div class="card-group animate__animated animate__flipInX">
                     <div class="card">
-                        <img src="https://www.catycan.com/78863-home_default/pouch-pro-plan-wet-cat-kitten-x-85-grs.jpg"
+                        <img src="https://http2.mlstatic.com/D_NQ_NP_733120-MLA50131748752_052022-O.webp"
                             alt="" class="">
                         <div class="card-body">
-                            <h5 class="card-title">{{p.nombre}}</h5>
-                            <h5 class="cart-text d-inline text-danger">{{p.precioWithDiscount}}
-                                <h5 class="d-inline tachado text-dark">{{p.precioOriginal}} </h5>
-                                <h6 class="d-inline text-success">%{{p.descuento}} Off</h6>
-                            </h5>
+                            <h5 class="card-title" style="font-size:18px">{{p.nombre}}</h5>
+                            <h4 class="cart-text d-inline text-dark">${{p.precioWithDiscount}}
+                                <h4 class="mx-2 d-inline text-success" style="font-size:18px">{{p.descuento}}% Off</h4>
+                            </h4>
                         </div>
                     </div>
                 </div>
                 <br>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col">
-
-        </div>
-    </div>
-    <div class="row">
-
     </div>
 </div>
