--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fbfbfb;">
   <div class="container">
     <img
       class="navbar-brand"
@@ -32,7 +32,7 @@
           <a class="nav-link" href="/productos">Productos</a>
         </li>
       </ul>
-      <span class="text-danger animate__animated animate__bounceInRight" *ngIf="changeText">Ver carrito</span>
+     <!--<span style="color:#143F6B" class="animate__animated animate__bounceInRight p-3" *ngIf="changeText">Ver carrito</span>-->
       <button (mouseover)="changeText=true" (mouseout)="changeText=false" id="cart" type="button"
         class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
         <i class="fa fa-shopping-cart" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#myModal"></i>
