--- a/src/app/views/signin/signin.component.html
+++ b/src/app/views/signin/signin.component.html
@@ -24,14 +24,9 @@
           value="Ingresar"
         />
       </div>
-      <label class="mt-4"
+      <label class="mt-4 text-center"
         >¿Aún no tienes una cuenta?
-        <span
-          class=" pointer"
-          style="color: #be5301; font-weight: 600;"
-          (click)="irARegistro()"
-          >Registrate</span
-        ></label
+        <a class="w-100" style="color:#be5301; font-weight: 600; text-decoration: none;" href="/signup">Registrate</a></label
       >
     </div>
   </form>
